# MasterProject-Code

./: .gitignore  CMakeLists.txt  LICENSE  README.md  openCVTest.cpp  test.xml  webRTCtestclient.html  webRTCtestclient_receiver.js  webRTCtestclient_reciever.html
24FPS_Test/: makefile  test.c
Uebertragung/: client.css  message.html  network-facade.js  network-webrtc.js  take_photo.html  webRTC_sender.html
Uebertragung/ProofofConcept_Javascript/: webRTC_receiver.html  webRTC_sender.js
Uebertragung/Receiver/: Makefile  conductor.cc  conductor.h  flagdefs.h  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.cc
Uebertragung/WebApp/: connection-Test.html  draw.html  index.html  message.html  network-facade.js  network-handling.js  network-webrtc-adapter.js  network-webrtc.js  network-websocket-adapter.js  photo.html  photogallery.html  take_photo.html  video.html
Uebertragung/WebRTCReceiver/: Makefile  defaults.cc  defaults.h  flagdefs.h  main.cc  main_wnd.cc  main_wnd.h  peer_connection_client.h
Uebertragung/css/: client.css
Uebertragung/images/: License
Visualisierung/: CMakeLists.txt  openCVTest.cpp
Visualisierung/ApplicationServer/: Makefile  MonkeyMediaProcessor.h  NetworkHandler.cpp  NetworkHandler.h  Rendering_Client.h  Utility.h  WebSocketServer.cpp  WebSocketServer.h  as.cpp  as.h  config.xml
Visualisierung/RenderingClient/: Info.plist  Makefile  README.md  rc.c  rc.h
Websocket_Test/Socket/: CMakeLists.txt  socket.cpp
Websocket_Test/libwebsockets/: Makefile  test_server.cpp
XML_Test/: index.html  main.cpp  test.xml  tinyxml2.h
(+18 files in other folders)
